<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey_300"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/descriptionText"
            android:layout_width="@dimen/activity_margin_100"
            android:layout_height="wrap_content"
            android:text="@string/Description"
            android:gravity="center"
            android:padding="@dimen/activity_margin_4"
            />
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/grey_300"
            />
        <TextView
            android:id="@+id/unitQuantity"
            android:layout_width="@dimen/activity_margin_100"
            android:layout_height="wrap_content"
            android:text="@string/unit"
            android:gravity="center"
            android:padding="@dimen/activity_margin_4"
            />
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/grey_300"
            />
        <TextView
            android:id="@+id/rate"
            android:layout_width="@dimen/activity_margin_150"
            android:layout_height="wrap_content"
            android:text="@string/rate"
            android:gravity="center"
            android:padding="@dimen/activity_margin_4"
            />
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/grey_300"
            />
        <TextView
            android:id="@+id/amount"
            android:layout_width="@dimen/activity_margin_100"
            android:layout_height="wrap_content"
            android:text="@string/amount"
            android:gravity="center"
            android:padding="@dimen/activity_margin_4"
            />
    </LinearLayout>
</LinearLayout>