<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        app:title="@string/newcustomer"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:titleTextColor="@android:color/white"
        android:background="@color/colorPrimary" />
<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/nameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/davidstone"
            android:textSize="@dimen/text_size_medium"
            android:padding="@dimen/activity_margin_18"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/off_white"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_margin_10"
                android:text="@string/phone_number"
                android:textColor="@color/textColor"
                android:textSize="@dimen/text_size_medium"
                />
            <TextView
                android:id="@+id/phoneText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_margin_100"
                android:padding="@dimen/activity_margin_10"
                android:layout_alignParentRight="true"
                android:textSize="@dimen/text_size_medium"
                android:textColor="@color/textColor"
                android:text="111-111-1111"
                />
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/off_white"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_margin_10"
                android:text="@string/address1"
                android:textColor="@color/textColor"
                android:textSize="@dimen/text_size_medium"
                />
            <TextView
                android:id="@+id/addressText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_margin_100"
                android:padding="@dimen/activity_margin_10"
                android:layout_alignParentRight="true"
                android:textSize="@dimen/text_size_medium"
                android:maxLength="100"
                android:textColor="@color/textColor"
                android:text="Abcdefghijklmnop"
                />
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/off_white"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_margin_10"
                android:text="@string/email_id"
                android:textColor="@color/textColor"
                android:textSize="@dimen/text_size_medium"
                />
            <TextView
                android:id="@+id/emailText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_margin_100"
                android:padding="@dimen/activity_margin_10"
                android:layout_alignParentRight="true"
                android:textSize="@dimen/text_size_medium"
                android:textColor="@color/textColor"
                android:text="david.stone@xyz.com"
                />
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_gray"
            android:visibility="gone"
            />
        <RelativeLayout
            android:id="@+id/paymentLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:visibility="gone"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_margin_10"
                android:text="@string/paymentmethod"
                android:textColor="@color/textColor"
                android:textSize="@dimen/text_size_medium"
                />
            <TextView
                android:id="@+id/paymentText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_margin_100"
                android:padding="@dimen/activity_margin_10"
                android:layout_alignParentRight="true"
                android:textSize="@dimen/text_size_medium"
                android:textColor="@color/colorPrimary"
                android:text="@string/selectpayment"
                />
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_gray"
            />
        <RelativeLayout
            android:id="@+id/distributorCodeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_margin_10"
                android:text="@string/distributorcode"
                android:textColor="@color/textColor"
                android:textSize="@dimen/text_size_medium"
                />
            <TextView
                android:id="@+id/distributorText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_margin_100"
                android:padding="@dimen/activity_margin_10"
                android:layout_alignParentRight="true"
                android:textSize="@dimen/text_size_medium"
                android:textColor="@color/colorPrimary"
                android:text="@string/selectdistributor"
                />
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_gray"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/productLayout"
            android:visibility="gone"
            android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_margin_10"
                android:text="@string/typeofproduct"
                android:textColor="@color/textColor"
                android:textSize="@dimen/text_size_medium"
                />
            <TextView
                android:id="@+id/productText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_margin_100"
                android:padding="@dimen/activity_margin_10"
                android:layout_alignParentRight="true"
                android:textSize="@dimen/text_size_medium"
                android:textColor="@color/colorPrimary"
                android:text="@string/selectproduct"
                />
        </RelativeLayout>
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_margin_10"
                android:text="@string/productprice"
                android:textColor="@color/textColor"
                android:textSize="@dimen/text_size_medium"
                />
            <EditText
                android:id="@+id/productEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/activity_margin_10"
                android:background="@android:drawable/edit_text"
                android:padding="@dimen/activity_margin_10"
                android:layout_gravity="right"
                android:gravity="right"
                android:layout_alignParentRight="true"
                android:textSize="@dimen/text_size_medium"
                android:textColor="@color/textColor"
                android:hint="@string/enterproductprice"
                />
</FrameLayout>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_gray"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <Button
                android:id="@+id/rejectButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/activity_margin_10"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_large"
                android:gravity="center"
                android:textAllCaps="false"
                android:background="@drawable/borderless_button"
                android:layout_margin="@dimen/activity_margin_6"
                android:text="@string/reject"
                />
            <Button
                android:id="@+id/approveButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/activity_margin_10"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_large"
                android:gravity="center"
                android:textAllCaps="false"
                android:background="@drawable/borderless_button"
                android:layout_margin="@dimen/activity_margin_6"
                android:text="@string/approve"
                />
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>
</LinearLayout>