<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_margin_4"
        android:background="@color/white"
        app:cardCornerRadius="@dimen/activity_margin_4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/monday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:gravity="left|center_vertical"
                android:paddingLeft="@dimen/activity_margin_28"
                android:paddingTop="@dimen/activity_margin_4"
                android:paddingBottom="@dimen/activity_margin_4"
                android:text="@string/monday"
                android:textAllCaps="false"
                android:textColor="@color/textColorDark" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/white_pressed" />

            <CheckBox
                android:id="@+id/tuesday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:gravity="left|center_vertical"
                android:paddingLeft="@dimen/activity_margin_28"
                android:paddingTop="@dimen/activity_margin_4"
                android:paddingBottom="@dimen/activity_margin_4"
                android:text="@string/tuesday"
                android:textAllCaps="false"
                android:textColor="@color/textColorDark" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/white_pressed" />

            <CheckBox
                android:id="@+id/wednesday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:gravity="left|center_vertical"
                android:paddingLeft="@dimen/activity_margin_28"
                android:paddingTop="@dimen/activity_margin_4"
                android:paddingBottom="@dimen/activity_margin_4"
                android:text="@string/wednesday"
                android:textAllCaps="false"
                android:textColor="@color/textColorDark" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/white_pressed" />

            <CheckBox
                android:id="@+id/thursday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:gravity="left|center_vertical"
                android:paddingLeft="@dimen/activity_margin_28"
                android:paddingTop="@dimen/activity_margin_4"
                android:paddingBottom="@dimen/activity_margin_4"
                android:text="@string/thursday"
                android:textAllCaps="false"
                android:textColor="@color/textColorDark" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/white_pressed" />

            <CheckBox
                android:id="@+id/friday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:gravity="left|center_vertical"
                android:paddingLeft="@dimen/activity_margin_28"
                android:paddingTop="@dimen/activity_margin_4"
                android:paddingBottom="@dimen/activity_margin_4"
                android:text="@string/friday"
                android:textAllCaps="false"
                android:textColor="@color/textColorDark" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/white_pressed" />

            <CheckBox
                android:id="@+id/saturday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:gravity="left|center_vertical"
                android:paddingLeft="@dimen/activity_margin_28"
                android:paddingTop="@dimen/activity_margin_4"
                android:paddingBottom="@dimen/activity_margin_4"
                android:text="@string/saturday"
                android:textAllCaps="false"
                android:textColor="@color/textColorDark" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/white_pressed" />

            <CheckBox
                android:id="@+id/sunday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:gravity="left|center_vertical"
                android:paddingLeft="@dimen/activity_margin_28"
                android:paddingTop="@dimen/activity_margin_4"
                android:paddingBottom="@dimen/activity_margin_4"
                android:text="@string/sunday"
                android:textAllCaps="false"
                android:textColor="@color/textColorDark" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/white_pressed" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
             <Button
                 android:id="@+id/cancel"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:background="@color/white"
                 android:text="@string/cancel"
                 />
                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0"
                    android:background="@color/white_pressed" />
                <Button
                 android:id="@+id/ok"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                    android:layout_weight="1"
                 android:background="@color/white"
                 android:text="@string/ok"
                 />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>